fix: "elytra only" capitalization

--- a/src/client/resources/assets/elytraonlycapeoption/lang/en_us.json
+++ b/src/client/resources/assets/elytraonlycapeoption/lang/en_us.json
@@ -2,5 +2,5 @@
   "options.cape": "Cape",
   "options.cape.on": "ON",
   "options.cape.off": "OFF",
-  "options.cape.elytra_only": "ELYTRA ONLY"
+  "options.cape.elytra_only": "Elytra Only"
 }
